2005-12-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R: Changed package document structure to avoid class
	dependency problems.

2005-12-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Wrote a script for the ModLewis Split for the Reuters-21578 XML
	data set.

	* Finished documentation and reordered directory structure. Now "R
	CMD check textmin" works without errors.

2005-12-04  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* src/: Various splits can now be easily created for the
	Reuters21578 data set.

2005-12-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Updated documentation

2005-11-30  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Wrote R documentation for some classes and methods.

2005-11-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Constructor of textdoccol allows import of CSV
	files. See the questionnaire data/Umfrage.csv for such an example.
	We are now able to import files in Reuters-21578 XML format.

	* Changed class interfaces in various files. Weighting of the text
	matrix is now possible.

2005-11-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: One can build term-document matrices if
	nessecary (with buildTDM(...)) and fill the field tdm from a text
	document collection with it.

	* R/textmatrix.R: Wrote S4 class for term-document matrices.

2005-11-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: We now can read in a whole XML file with several
	news items.

2005-11-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Set up an S4 class for a collection of text
	documents. A first attempt to read in XML input (like the RCV1
	set) was made.

	* R/textdocument.R: Set up an S4 class for text documents. Wrote
	some accessor functions.

	* data/newsitem.xml: Added this XML file for testing purposes. It
	contains a single news item from the Reuters Corpus Volume 1
	(RCV1) XML set.

2005-10-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
